--- a/style/style.css
+++ b/style/style.css
@@ -9,5 +9,88 @@
 }
 /* Style the body element */
 body {
-    font-family: "Sora", sans-serif;
+    font-family: "Sora", sans-serif;  
+    background: #FAFAF9;
+}
+/* shared style */
+.container{
+    width: 95%;
+    max-width: 1280px;
+    margin: 0 auto;
+    height: 100vh;
+}
+p, li {
+    color: #716c6c;
+    line-height: 30px;
+}
+.testimonial_content{
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    gap: 50px;
+}
+.star_bg{
+    width: 50px;
+    height: 50px;
+    background: #F5C044;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.star_bg img{
+    width: 30px;
+    height: 30px;
+}
+.item_one{
+    flex-basis: 50%;
+}
+.item_one h1{
+    font-size: 36px;
+    margin: 20px 0;
+}
+.item_one p{
+    font-size: 20px;
+    margin: 0 0 30px 0;
+}
+.item_one ul li{
+    font-size: 18px;
+    margin: 0 0 20px 0;
+    list-style-image: url(/image/Done_ringi.svg);
+    list-style-position: inside;
+}
+.item_two{
+    flex-basis: 50%;
+    position: relative;
+}
+.item_two .box {
+    width: 360px;
+    background: #FFFFFF;
+    border-radius: 10px;
+    padding: 30px;
+    margin: 0 0 40px 0;
+    position: absolute;
+}
+.item_two .star_wrapper {
+    display: flex;
+    gap: 20px;
+}
+.item_two .box .testimonial_img{
+    width: 88px;
+}
+.item_two .box .testimonial_img img {
+    width: 100%;
+}
+.item_two .box h3{
+    margin: 15px 0;
+}
+.item_tow .box p{
+    font-size: 18px;
+}
+.google{
+    top: -250px;
+    right: 0;
+}
+.meta{
+    left: 0;
 }
